# bucket

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.adoc  README.md  license_header.txt  pylib.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
bucket/: __init__.py  __main__.py  axis.py  axisutils.py  base.py  bucket.py  context.py  covergroup.py  coverpoint.py  covertop.py  cursor.py  example.py  goal.py  link.py  sampler.py  triggers.py
bucket/common/: chain.py  ensure.py  exceptions.py  types.py
bucket/rw/: __init__.py  common.py  console.py  html.py  json.py  point.py  sql.py
docs/: add_to_testbench.md  covergroups.md  coverpoints.md  covertop.md  export_and_merge.md  filters.md  index.md  intro.adoc  introduction.md  sampler.md  viewing_coverage.md
example/: cats.py  common.py  dogs.py  example.py  top.py
fcov/: README.md  __init__.py  __main__.py  axis.py  chain.py  context.py  coverchain.py  covergroup.py  coverpoint.py  cursor.py  example.py  export.py  goal.py  link.py  sampler.py  triggers.py
fcov/common/: chain.py
fcov/export/: base.py  sql.py
fcov/rw/: __init__.py  base.py  common.py  console.py  merge.py  point.py  sql.py
tests/: test_axis.py  test_axisutils.py  test_base.py  test_basic.py
viewer/: .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc  README.md  index.html  main.py  package-lock.json  package.json  pyscript.json  tsconfig.json  vite-bundle.config.ts  vite.config.ts
viewer/client/: .prettierrc  index.html  package-lock.json  package.json  (+2 more)
(+38 files in other folders)
