[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bucket"
version = "0.1"
description = "Python functional coverage"
authors = [
    "Stuart Alldred <stuart@vypercore.com>",
    "Edward Kotarski <edktrsk@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.4"
sqlalchemy = "2.0.23"
gitpython = "3.1.41"
click = "^8.1.3"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
